# cutile-typeviz

./: LICENSE.md  README.md  build_ext.sh  build_py.sh  package-lock.json  package.json  prompt.md  pyproject.toml  reset.py  tsconfig.json
cext/: tile_kernel.cpp
docs/source/: data.rst  index.rst  release_notes.rst
examples/: layernorm.cutile.py  matmul.cutile.py  sample01.cutile.py  sample02.cutile.py
samples/utils/: autotuner.py
server/: package-lock.json  package.json
server/src/: char_counter.py  server.ts
src/: attn_lsp.py  extension.ts  fmha.cutile.py  fmha.py  func_ir.py  get_types.py  layernorm.cutile.py  layernorm_ir.py  layernorm_lsp.cutile.py  layernorm_lsp.py  matmul.cutile.py  matmul_lsp.py  new_attn.cutile.py  simple_attn.cutile.py  test_attention_typechecked.py
src/cuda/tile/: _compile.py
src/cutile_typeviz/: __main__.py
src/cutile_typeviz/cutile_utils/: README.md
src/cutile_typeviz/server_py/: README.md  __init__.py  requirements.txt
src/ir_dump/: dumper.py  mock_tensor.py  shape_check.py
src/typecheck/: assemble.py
test/: test_autotuner.py  test_dispatcher.py  test_fma.py  test_typeinfer.py
vscode_extension/: README.md  package-lock.json  package.json
vscode_extension/cutile/: attention_ir_example.py  fmha.cutile.py  matmul.cutile.py  matmul_lsp.cutile.py  new_fmha.cutile.py
vscode_extension/cutile/examples/: dump_ir.py  dump_shape_info.py
vscode_extension/cutile/ir_dump/: README.md  __init__.py  (+1 more)
vscode_extension/server/: package-lock.json  package.json
vscode_extension/server_py/: __init__.py  server.py
vscode_extension/src/: extension.ts
(+16 files in other folders)
